--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -70,6 +70,11 @@
                 <artifactId>order-application</artifactId>
                 <version>${order-application.version}</version>
             </dependency>
+            <dependency>
+                <groupId>me.namila.food_ordering</groupId>
+                <artifactId>commons</artifactId>
+                <version>${ordering-commons.version}</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
