--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
 
     <name>food-ordering-system</name>
     <url>https://namila.me</url>
+    <modules>
+        <module>commons</module>
+    </modules>
 
 
     <properties>
@@ -29,6 +32,7 @@
         <junit-bom.version>5.10.0</junit-bom.version>
         <!--order service-->
         <order-service.version>1.0.0-dev-SNAPSHOT</order-service.version>
+        <ordering-commons.version>1.0.0-dev-SNAPSHOT</ordering-commons.version>
     </properties>
 
     <dependencyManagement>
