--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -13,7 +13,7 @@
     <version>${ordering-commons.version}</version>
     <packaging>pom</packaging>
     <modules>
-        <module>common-domain</module>
+        <module>commons-domain</module>
     </modules>
 
     <properties>
@@ -22,6 +22,16 @@
         <!--        versioning-->
         <common-domain.version>1.0.0-dev-SNAPSHOT</common-domain.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>me.namila.food_ordering</groupId>
+                <artifactId>common-domain</artifactId>
+                <version>${common-domain.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 
 </project>
