--- a/order-service/order-domain/order-domain-application-service/pom.xml
+++ b/order-service/order-domain/order-domain-application-service/pom.xml
@@ -28,5 +28,17 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>me.namila.food_ordering</groupId>
+            <artifactId>commons-domain</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
 </project>
