--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,9 @@
         <lombok.version>1.18.28</lombok.version>
         <flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
         <junit-bom.version>5.10.0</junit-bom.version>
+        <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <!--        versioning lib-->
+        <snakeyaml.version>2.1</snakeyaml.version>
         <!--order service-->
         <order-service.version>1.0.0-dev-SNAPSHOT</order-service.version>
         <ordering-commons.version>1.0.0-dev-SNAPSHOT</ordering-commons.version>
@@ -43,6 +46,12 @@
                 <version>${lombok.version}</version>
                 <scope>provided</scope>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct -->
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct</artifactId>
+                <version>${mapstruct.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -55,12 +64,19 @@
             </modules>
         </profile>
         <profile>
+            <id>commons-libs</id>
+            <modules>
+                <module>commons</module>
+            </modules>
+        </profile>
+        <profile>
             <id>default</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
             <modules>
                 <module>order-service</module>
+                <module>commons</module>
             </modules>
         </profile>
     </profiles>
@@ -78,6 +94,12 @@
                     <artifactId>flatten-maven-plugin</artifactId>
                     <version>${flatten-maven-plugin.version}</version>
                 </plugin>
+                <plugin>
+                    <!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processor -->
+                    <groupId>org.mapstruct</groupId>
+                    <artifactId>mapstruct-processor</artifactId>
+                    <version>${mapstruct.version}</version>
+                </plugin>
             </plugins>
         </pluginManagement>
 
@@ -92,6 +114,10 @@
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                             <version>${lombok.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
