--- a/infrastructure/pom.xml
+++ b/infrastructure/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>me.namila.food_ordering</groupId>
         <artifactId>food-ordering-system</artifactId>
-        <version>1.0.0-dev-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>infrastructure</artifactId>
