kafka pom and configs impl

--- a/infrastructure/pom.xml
+++ b/infrastructure/pom.xml
@@ -8,7 +8,8 @@
     </parent>
 
     <artifactId>infrastructure</artifactId>
-    <packaging>jar</packaging>
+    <version>${infrastructure.version}</version>
+    <packaging>pom</packaging>
 
     <name>infrastructure</name>
     <url>http://maven.apache.org</url>
@@ -17,4 +18,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <modules>
+        <module>kafka</module>
+    </modules>
 </project>
