--- a/order-service/order-application/pom.xml
+++ b/order-service/order-application/pom.xml
@@ -15,13 +15,25 @@
 
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>me.namila.food_ordering</groupId>
             <artifactId>order-domain-application-service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>me.namila.food_ordering</groupId>
+            <artifactId>commons-application</artifactId>
         </dependency>
     </dependencies>
 </project>
