--- a/order-service/order-container/pom.xml
+++ b/order-service/order-container/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
 
     <name>order-container</name>
-
+    <version>${order-container.version}</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -53,7 +53,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <image>
-                        <name>${project.groupId}/order-service:${project.artifactId}</name>
+                        <name>${project.groupId}/${project.artifactId}:${project.version}</name>
                     </image>
                 </configuration>
                 <executions>
