payment service msg, dao impl

--- a/payment-service/payment-dataaccess/pom.xml
+++ b/payment-service/payment-dataaccess/pom.xml
@@ -10,8 +10,30 @@
     </parent>
 
     <artifactId>payment-dataaccess</artifactId>
-
+    <version>${payment-dataaccess.version}</version>
     <properties>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>me.namila.food_ordering</groupId>
+            <artifactId>payment-application-service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
