--- a/infrastructure/docker-compose/.env.local
+++ b/infrastructure/docker-compose/.env.local
@@ -2,3 +2,4 @@ KAFKA_VERSION=6.0.14
 GLOBAL_NETWORK=food-ordering-system
 GROUP_ID=me.namila.food_ordering
 DOCKER_VOLUME_ROOT=/f/Projects/kafka
+REPLICATOR_LOG4J_ROOT_LOGLEVEL=INFO
